src/test/deca/syntax/valid/PrintStringInt.deca
{
    int a ;
    println("a vaut ",a);
}