src/test/deca/syntax/invalid/FauxPrint.deca
{
    printn("Je suis print mal écrit");
}